spacing fix

--- a/css/style.css
+++ b/css/style.css
@@ -184,8 +184,7 @@ padding-right: 6vw;
     
 }
 .logos2{
-    margin-right:30%;
-    margin-left:30%;
+   
     margin-bottom: 2vw;
 }
     .logos2:hover{
@@ -309,9 +308,5 @@ padding-top: 4rem;
 .insights{
     width:50rem;
 }
-.logos2{
-    margin-right:5%;
-    margin-left:5%;
-  
-}
+
 }
